# Funput

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  publish-repo.yml  release-macos.yml  release.yml
benchmarks/: README.md
crates/funput-cli/: Cargo.toml
crates/funput-cli/src/: cli.rs  main.rs
crates/funput-core/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/funput-core/src/: lib.rs
crates/funput-core/src/composition/: apply.rs  revert.rs  transform.rs
crates/funput-core/src/input_method/: mod.rs  telex.rs  vni.rs
crates/funput-core/src/unicode/: marks.rs  tone_position.rs
crates/funput-core/src/validation/: syllable.rs
crates/funput-core/tests/: telex_basic.rs  telex_fixtures.rs  telex_parity.rs  vni_basic.rs
crates/funput-core/tests/fixtures/: telex_cases.rs  telex_parity.rs  vni.json.example  vni_cases.rs
crates/funput-desktop/: Cargo.toml
crates/funput-desktop/src/: lib.rs
crates/funput-engine/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/funput-engine/src/: boundary.rs  diff.rs  flip.rs  lib.rs  pipeline.rs  result.rs  session.rs
crates/funput-engine/tests/: engine_fixtures.rs  remove_tone.rs  restore_toggle.rs  shortcut.rs  tone_placement.rs  vni_steps.rs  word_boundary.rs
crates/funput-engine/tests/fixtures/: step_cases.rs
crates/funput-engine/tests/support/: mod.rs
crates/funput-ffi/: Cargo.toml  IMPLEMENTATION.md  README.md  cbindgen.toml
crates/funput-ffi/include/: funput.h
crates/funput-ffi/scripts/: gen-header.sh
crates/funput-ffi/src/: lib.rs  types.rs
crates/funput-ffi/tests/: round_trip.rs
crates/funput-term/: Cargo.toml
crates/funput-term/src/: install.rs  lib.rs
