[workspace]
resolver = "2"
members = [
    "crates/funput-core",
    "crates/funput-engine",
    "crates/funput-cli",
    "crates/funput-ffi",
    "crates/funput-term",
    "crates/funput-desktop",
]
# The Windows shell pulls in `tauri` + the `windows` crate, which only build on a
# Windows target. Keep it out of the default workspace so `cargo test --workspace`
# stays green on macOS/Linux dev machines; build it from its own dir on Windows.
exclude = [
    "platforms/windows/src-tauri",
    "platforms/linux/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Funput"]
